--- a/test-cli.nuspec
+++ b/test-cli.nuspec
@@ -12,7 +12,7 @@
      Test-CLI
     </description>
    <summary>View and convert documents, intuitive and powerful GroupDocs.Viewer dotnet tool CLI.</summary>
-   <copyright>©Aspose Pty Ltd 2001-$CurrentYear$. All Rights Reserved.</copyright>
+   <copyright>TEST</copyright>
    <tags>
     Document-Viewer CLI Html-Viewer Image-Viewer PDF-Viewer
     Doc-Viewer PDF Word Excel PowerPoint EMail Image PDF DOC DOCX NUMBERS XLS XLSX PPT PPTX TIFF PNG JPG
